--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     ],
     "paths": {
       "@/*": ["./*"],
+      "@/public/*": ["./public/*"],
       "@/components/*": ["./components/*"],
       "@/lib/*": ["./lib/*"]
     }
